# MLOPS-INSURNCE-DOMAIN

./: .gitignore  LICENSE  README.md  demo.py  projectflow.txt  pyproject.toml
notebook/: mongo_DB_demo.ipynb
src/exception/: __init__.py
