[project]
name = "mlops-insurnce-domain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.18",
    "botocore>=1.42.18",
    "certifi>=2025.11.12",
    "dill>=0.4.0",
    "fastapi>=0.128.0",
    "from-root>=1.3.0",
    "imblearn>=0.0",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "mypy-boto3-s3>=1.42.16",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pymongo>=4.15.5",
    "python-multipart>=0.0.21",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.40.0",
]
